[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/datas.gd" type="Script" id=1]

[node name="datas" type="Node2D"]
script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]
margin_left = 189.0
margin_top = 159.0
margin_right = 874.0
margin_bottom = 256.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )

[node name="Button2" type="Button" parent="."]
margin_left = 189.0
margin_top = 267.0
margin_right = 874.0
margin_bottom = 364.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )

[node name="Button3" type="Button" parent="."]
margin_left = 189.0
margin_top = 375.0
margin_right = 874.0
margin_bottom = 472.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )

[node name="Button4" type="Button" parent="."]
margin_left = 188.0
margin_top = 479.0
margin_right = 873.0
margin_bottom = 576.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 194.0
margin_top = 40.0
margin_right = 877.0
margin_bottom = 93.0
text = "CLIQUE NO FATOS HISTÓRICOS DA COMPUTAÇÃO ORDENANDO DO MAIS ANTIGO AO MAIS RECENTE"
